<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.cleverlycode.getwheels.R" />

        <variable
            name="viewmodel"
            type="com.cleverlycode.getwheels.ui.viewmodels.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:padding="24dp"
        android:transitionGroup="true"
        tools:context=".ui.views.auth.LoginFragment">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/text_app_logo"
            android:src="@drawable/get_wheels_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:boxCornerRadiusBottomEnd="50dp"
            app:boxCornerRadiusBottomStart="50dp"
            app:boxCornerRadiusTopEnd="50dp"
            app:boxCornerRadiusTopStart="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_logo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_username"
                android:inputType="textEmailAddress"
                android:onTextChanged="@{(text, start, before, count) -> viewmodel.onEmailChange(text, start, before, count)}"
                android:singleLine="true"
                android:text="@{viewmodel.loginUiState.email}"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="50dp"
            app:boxCornerRadiusBottomStart="50dp"
            app:boxCornerRadiusTopEnd="50dp"
            app:boxCornerRadiusTopStart="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_input_layout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:onTextChanged="@{(text, start, before, count) -> viewmodel.onPasswordChange(text, start, before, count)}"
                android:singleLine="true"
                android:text="@{viewmodel.loginUiState.password}"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/error_text_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/error_incorrect_credentials"
            android:textColor="@color/red"
            android:visibility="@{viewmodel.loginUiState.passwordError ? View.VISIBLE : View.GONE}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_input_layout" />

        <TextView
            android:id="@+id/text_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/label_forgot_password"
            android:textColor="@color/blue"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_input_layout" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner_button"
            android:enabled="@{viewmodel.loginUiState.buttonEnabled}"
            android:text="@string/label_sign_in"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_forgot_password" />

        <View
            android:id="@+id/divider"
            android:layout_width="130dp"
            android:layout_height="0.75dp"
            android:layout_marginEnd="15dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@+id/text_ok"
            app:layout_constraintEnd_toStartOf="@+id/text_ok"
            app:layout_constraintTop_toTopOf="@+id/text_ok" />

        <TextView
            android:id="@+id/text_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_or"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_login" />

        <View
            android:id="@+id/divider2"
            android:layout_width="130dp"
            android:layout_height="0.75dp"
            android:layout_marginStart="15dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@+id/text_ok"
            app:layout_constraintStart_toEndOf="@+id/text_ok"
            app:layout_constraintTop_toTopOf="@+id/text_ok" />

        <Button
            android:id="@+id/button_login_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner_button"
            android:text="@string/label_button_google"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_ok" />

        <Button
            android:id="@+id/button_login_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner_button"
            android:text="@string/label_button_facebook"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login_google" />

        <TextView
            android:id="@+id/text_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_sign_up_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_login_facebook" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
